# warp-lang

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  RELEASING.md  ROADMAP.md  SPEC.md
.github/workflows/: ci.yml  release.yml
bindings/go/: README.md  generate-go.mjs  go.mod  multi_agent.go  multi_agent_test.go  multi_object_test.go  runtime.go  runtime_test.go  saga.go  saga_test.go  toolkit.go  toolkit_test.go
conformance/: README.md  manifest.json
conformance/case-studies/: _generate.mjs  validate-aux.mjs
conformance/case-studies/api-metering/: api-metering.json
conformance/case-studies/auction-family/: auction-family.json
conformance/case-studies/bnpl/: bnpl.json
conformance/case-studies/carbon-credits/: carbon-credits.json
conformance/case-studies/fx/: fx.json
conformance/invalid/: i1-currency-mixed.expected.json  i1-currency-mixed.json  i1-over-refund.expected.json  i1-over-refund.json  i2-backward-transition.expected.json  i2-backward-transition.json  i3-accept-without-capacity.expected.json  i3-accept-without-capacity.json  i4-empty-history-fulfilled.expected.json  i4-empty-history-fulfilled.json  i4-fulfillment-before-commitment.expected.json  i4-fulfillment-before-commitment.json  i5-duplicate-id.expected.json  i5-duplicate-id.json  i6-children-exceed-parent.expected.json  i6-children-exceed-parent.json  money-breakdown-currency-mixed.expected.json  money-breakdown-currency-mixed.json  money-breakdown-sum-mismatch.expected.json  money-breakdown-sum-mismatch.json
conformance/runner/: run.mjs
conformance/tooling/: build.mjs  crosscheck-python.py  crosscheck-ts.mjs  crosscheck.mjs  score-adapter.mjs  test-score-adapter.mjs
conformance/transitions/: commitment-happy-path.json  commitment-reject-backward.json  fulfillment-failed-nonrecoverable.json  fulfillment-failed-recoverable.json  intent-abandon.json  intent-convert.json
conformance/valid/: catalog-commitment-states.json  catalog-fulfillment-states.json  catalog-intent-states.json  catalog-party-types.json  catalog-value-forms.json  catalog-value-states.json  commission-split-multiparty.json  money-breakdown-float-tolerance.json  money-breakdown-single-currency.json  money-breakdown-sums-correctly.json  money-roundtrip-minor-units.json  order-paid-fulfilled.json  refund-exact-committed.json  refund-within-committed.json  tree-float-0.1-plus-0.2.json  tree-parent-children-sum.json
crates/warp-commerce-types/: Cargo.toml  README.md
crates/warp-core/: Cargo.toml
crates/warp-core/src/: lib.rs  templates.rs
crates/warp-core/src/ai_builder/: builder.rs  mod.rs  prompt.rs
crates/warp-core/src/api/: merchant.rs  mod.rs  workflow.rs
crates/warp-core/src/dsl/: ast.rs  codegen.rs  lexer.rs  mod.rs  parser.rs  type_checker.rs
crates/warp-core/src/poc/: cart_recovery.rs  mod.rs  primitives.rs
crates/warp-core/src/types/: commerce.rs  mod.rs  model.rs
crates/warp-core/tests/: codegen_e2e.rs
crates/warp-generated/: Cargo.toml
crates/warp-generated/src/: lib.rs
crates/warp-mcp/: Cargo.toml  README.md
crates/warp-mcp/src/: lib.rs  main.rs  server.rs  tools.rs
crates/warp-mcp/src/commerce/: claude.rs  mod.rs
crates/warp-mcp/tests/: commerce_tools_tests.rs
docs/: CONFORMANCE.md  GETTING_STARTED.md  WARP_COMMERCE_MODEL.md  WARP_DSL_SYNTAX.md  WARP_TYPE_DERIVATION.md  WARP_TYPE_SPEC_v0.1.md  WARP_TYPE_SPEC_v0.2.md  WARP_TYPE_SPEC_v0.3.md  authoring-a-binding.md  manifesto.md  open-core.md
docs/adapters/: sap-s4hana.md
docs/adr/: 0001-commerce-type-system-extension-strategy.md  0002-multi-tenancy-implementation-strategy.md  0003-platform-adapter-interface.md  0004-ai-builder-safety-model.md  0005-node-versioning.md  0006-restate-as-execution-foundation.md  0007-warp-dsl-syntax.md
docs/case-studies/: README.md  api-metering.md  auction-family.md  bnpl.md  carbon-credits.md  escrow.md  events.md  fx.md  gifting.md  government-procurement.md  group-buying.md  healthcare.md  loyalty.md  marketplace.md  nft.md  physical-ecommerce.md  pos.md  real-estate.md  saas.md  services.md  streaming.md  trade-finance.md  wholesale.md
examples/: README.md  cart_recovery.warp  post_purchase.warp
schema/: BACKLOG-v1.1.md  README.md  validate.mjs
schema/behavior/: invariants.json  transitions.json
schema/structure/: auction.schema.json  auxiliary.schema.json  commerce-v03.schema.json  commitment.schema.json  fulfillment.schema.json  index.schema.json  intent.schema.json  metering.schema.json  money.schema.json  party.schema.json  primitives.schema.json  resolution.schema.json  states.schema.json  terms.schema.json  value.schema.json
scripts/: conformance-badge.mjs
spec/: COMMERCE_MODEL.md  COMPATIBLE_GUIDE.md  TYPE_SPEC.md
(+49 files in other folders)
