[package]
name = "warp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Warp execution layer: compiler, type system, and Restate workflow wrappers"

[dependencies]
restate-sdk.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
# Used by the AI builder to POST to api.anthropic.com. rustls-tls is
# already the workspace-wide choice (matches reqwest in warp-catalog).
reqwest.workspace = true
# v4 — model primitive ids (IntentID/CommitmentID/FulfillmentID::new_v4).
# Also used by the codegen end-to-end test to mint scratch-dir names.
uuid.workspace = true
